--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "dependencies": {
     "@fastify/swagger": "^9.6.1",
     "@fastify/swagger-ui": "^5.2.5",
+    "@prisma/adapter-pg": "^7.3.0",
     "@prisma/client": "^7.3.0",
     "dotenv": "^17.2.3",
     "fastify": "^5.6.2",
+    "pg": "^8.17.2",
     "playwright": "^1.58.0",
     "prisma": "^7.3.0",
     "uuid": "^13.0.0"
