--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fastify/rate-limit": "^10.3.0",
+    "@fastify/redis": "^7.1.0",
     "@fastify/swagger": "^9.6.1",
     "@fastify/swagger-ui": "^5.2.5",
     "@prisma/adapter-pg": "^7.3.0",
     "@prisma/client": "^7.3.0",
+    "bullmq": "^5.67.1",
     "dotenv": "^17.2.3",
     "fastify": "^5.6.2",
+    "ioredis": "^5.9.2",
     "pg": "^8.17.2",
     "playwright": "^1.58.0",
     "prisma": "^7.3.0",
