--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "pg": "^8.17.2",
     "playwright": "^1.58.0",
     "prisma": "^7.3.0",
-    "uuid": "^13.0.0"
+    "uuid": "^13.0.0",
+    "xlsx": "^0.18.5"
   }
 }
